--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -8,5 +8,7 @@
   <% end %>
 </ul>
 
-<%= link_to "delete", tag_path(@tag, method: :delete %>
-<%= link_to "Create a New Tag", new_tag_path, class: "new_tag" %>
+<% if logged_in? %>
+  <%= link_to "delete", tag_path(@tag, method: :delete %>
+  <%= link_to "Create a New Tag", new_tag_path, class: "new_tag" %>
+<% end %>
